[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/PlayerBoard.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/PlayerEnergy.tscn" type="PackedScene" id=2]
[ext_resource path="res://Fonts/OpenSans30.tres" type="DynamicFont" id=3]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=7]

[node name="Player" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerBoard" parent="." instance=ExtResource( 1 )]

[node name="PlayerEnergy" parent="." instance=ExtResource( 2 )]
margin_top = 41.804
margin_bottom = 115.804

[node name="EndBtn" type="Button" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -83.5
margin_top = 41.2724
margin_right = 83.5
margin_bottom = 89.2724
custom_fonts/font = ExtResource( 3 )
text = "END TURN"
[connection signal="button_up" from="EndBtn" to="." method="_on_EndBtn_button_up"]
